# stock_bot

./: .gitignore  README.md  config.py  main.py  pyproject.toml  sheets.py
handlers/: __init__.py  add.py  start.py  stock.py  utils.py  venta.py
