[project]
name = "google-sheets-auto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-auth>=2.49.1",
    "gspread>=6.2.1",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
    "pywhatkit>=5.4",
]
